--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "discord-announcements-bot",
   "version": "1.0.0",
-  "description": "Bot para enviar anuncios en Discord",
+  "description": "Bot de Discord con comandos de anuncios y Roblox",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "node deploy-commands.js"
   },
   "dependencies": {
-    "discord.js": "^14.0.0",
-    "dotenv": "^16.0.0",
-    "noblox.js": "^6.2.0"
+    "discord.js": "^14.15.3",
+    "noblox.js": "^4.14.0",
+    "dotenv": "^16.3.1"
   }
 }
