--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "discord-announcements-bot",
   "version": "1.0.0",
-  "description": "Bot de Discord con comandos de anuncios y Roblox",
+  "description": "Bot de Discord con anuncios, Roblox y moderación",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "deploy": "node deploy-commands.js"
   },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "noblox.js": "^4.14.0",
-    "dotenv": "^16.3.1"
+    "discord.js": "14.15.3",
+    "noblox.js": "4.15.1",
+    "dotenv": "16.3.1"
   }
 }
